# albums_dj

./: README.md  pyproject.toml
project/albums/: models.py  serializers.py  tests.py  urls.py  views.py
project/albums/migrations/: 0001_initial.py  0002_rename_year_of_release_album_release_year_and_more.py  0003_remove_album_artist.py  0004_album_artist.py
project/albums/templates/albums/: album_list.html
project/artists/: admin.py  models.py  serializers.py  urls.py  views.py
project/artists/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
